<resources>
    <string name="app_name">Bargain Mate</string>
    <string name="app_version">Version 0.8.9</string>

    <string name="admob_app_id">ca-app-pub-6494160563895466~7745823035</string>
    <string name="admob_about_banner_id">ca-app-pub-6494160563895466/1612208262</string>
    <string name="admob_list_banner_id">ca-app-pub-6494160563895466/2911712026</string>
    <string name="admob_web_banner_id">ca-app-pub-6494160563895466/8612483460</string>
    <string name="admob_sample_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_list_interstital_id">ca-app-pub-6494160563895466/3667078853</string>
    <string name="admob_web_interstital_id">ca-app-pub-6494160563895466/6484813880</string>

    <string name="pref_jumia">jumia</string>
    <string name="pref_konga">konga</string>
    <string name="pref_slot">slot</string>
    <string name="pref_jiji">jiji</string>
    <string name="pref_kara">kara</string>

    <string name="progress_bar_text">Fetching Results</string>
</resources>

